Deployments/unode-deployments/unode-dev-backend-onboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unode-backend-onboard
  namespace: default
  labels:
    app: unode-backend-onboard
spec:
  replicas: 1
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
  selector:
    matchLabels:
      app: unode-backend-onboard
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: unode-backend-onboard
    spec:
      containers:
      - image: mohitini8/unode-dev-onboard-api:0.7.8
        name: unode-backend-onboard
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
