Deployments/unode-deployments/unode-dev-exporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "3"
  creationTimestamp: "2024-08-29T07:57:54Z"
  generation: 3
  labels:
    app: unode-dev-exporter
  name: unode-dev-exporter
  namespace: default
  resourceVersion: "21260508"
  uid: 9fc9171d-6731-4d90-a9b9-0af3a159371a
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: unode-dev-exporter
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: unode-dev-exporter
    spec:
      containers:
      - image: mohitini8/unode-dev-exporter:0.0.9
        imagePullPolicy: IfNotPresent
        name: unode-dev-exporter
        ports:
        - containerPort: 8888
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2024-08-29T07:57:58Z"
    lastUpdateTime: "2024-08-29T07:57:58Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2024-08-29T07:57:54Z"
    lastUpdateTime: "2024-09-27T06:45:46Z"
    message: ReplicaSet "unode-dev-exporter-79dd76d685" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 3
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
