Deployments/unode-deployments/unode-dev-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unode-frontend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unode-frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: unode-frontend
    spec:
      containers:
        - name: unode-frontend
          image: mohitini8/unode-dev2-fe:0.3.8
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              protocol: TCP
