Deployments/unode-deployments/unode-onboard-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unode-onboard-api  
  namespace: default
  labels:
    app: unode-onboard-api  
spec:
  replicas: 1
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
  selector:
    matchLabels:
      app: unode-onboard-api 
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: unode-onboard-api  
    spec:
      containers:
      - image: mohitini8/unode-dev-onboard-api:0.7.6
        name: unode-onboard-api  
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
