Deployments/unode-deployments/unode-dev-exporter-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: unode-dev-exporter
  name: unode-dev-exporter
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8888
  selector:
    app: unode-dev-exporter
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
