Deployments/unode-deployments/unode-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unode-frontend-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: unode-frontend
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
