Deployments/unode-deployments/unode-dev-backend-onboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unode-backend-onboard-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: unode-beta-api.unification.io
    http:
      paths:
      - backend:
          service:
            name: unode-backend-onboard-service
            port:
              number: 8000
        path: /onboard
        pathType: Prefix
