Deployments/unode-deployments/unode-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unode-frontend-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: unode-beta.unification.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unode-frontend-service
                port:
                  number: 80
          - path: /super-user/
            pathType: Prefix
            backend:
              service:
                name: unode-dev-admin-frontend-service
                port:
                  number: 80
